@@ -34,6 +34,10 @@ $gzip = '/bin/gzip';
 #$cvs = 'c:/Program Files/GNU/WinCvs 1.3/CVSNT/cvs.exe';
 $cvs = '/usr/bin/cvs';
 
+# Location of the p4 (Perforce client) binary.  This does not need to be set
+# if you are using any perforce repositories.
+$p4 = '/usr/local/bin/p4';
+
 # Location of the vss binary.  This can be ignored for deployments which don't
 # use VSS (Visual Source Safe).
 $vss = 'C:/Program Files/Microsoft Visual Studio/Common/VSS/win32/vss.exe';
@@ -94,6 +98,7 @@ $bugtracker = '';
      'vss:localhost',
      ':local:c:\\cvsrep',
      'c:/cvsrep2',
+     'perforce:sits2@localhost:1666'
     );
 
 # A mapping of repositories to filename viewers.  Examples of such systems
