@@ -19,6 +19,7 @@ use FileHandle;
 use File::Temp qw/ tempfile /;
 use Codestriker::FileParser::CvsUnidiff;
 use Codestriker::FileParser::SubversionDiff;
+use Codestriker::FileParser::PerforceDescribe;
 use Codestriker::FileParser::VssDiff;
 use Codestriker::FileParser::PatchUnidiff;
 use Codestriker::FileParser::UnknownFormat;
@@ -79,6 +80,15 @@ sub parse ($$$$$) {
 	    @diffs =
 		Codestriker::FileParser::SubversionDiff->parse($tmpfh,
 							       $repository);
+	}
+
+	# Check if it is a Perforce describe file.
+	if ($#diffs == -1) {
+	    seek($tmpfh, 0, 0) ||
+		die "Unable to seek to the start of the temporary file: $!";
+	    @diffs =
+		Codestriker::FileParser::PerforceDescribe->parse($tmpfh,
+								 $repository);
 	}
 
 	# Check if it is a VSS diff file.
