@@ -16,6 +16,7 @@ use Codestriker::Repository::CvsPserver;
 use Codestriker::Repository::ViewCvs;
 use Codestriker::Repository::CvsWeb;
 use Codestriker::Repository::Subversion;
+use Codestriker::Repository::Perforce;
 use Codestriker::Repository::Vss;
 
 # Factory method for retrieving a Repository object, given a descriptor.
@@ -47,6 +48,9 @@ sub get ($$) {
     } elsif ($repository =~ /^\s*svn:(https?:\/\/.*)\s*$/i) {
 	# Subversion repository.
 	return Codestriker::Repository::Subversion->new($1);
+    } elsif ($repository =~ /^\s*perforce:(.*)@(.*):(.*)\s*$/i) {
+	# Perforce repository.
+	return Codestriker::Repository::Perforce->new($1, $2, $3);
     } elsif ($repository =~ /^\s*vss:(.*)$/i) {
 	# Visual Source Safe (VSS) repository.
 	return Codestriker::Repository::Vss->new($1);
